--- a/chat.html
+++ b/chat.html
@@ -126,13 +126,10 @@
             const data = message.data;
             const chatBox = document.getElementById("chatBox");
 
-            // **Block messages from muted users for everyone, not just the devs who muted them**
+            // **Block messages from muted users for everyone**
             if (mutedUsers[data.user] && Date.now() < mutedUsers[data.user]) {
-                // Only allow devs and head dev to see muted user messages
-                if (!devEmails.includes(sessionStorage.getItem("userEmail"))) {
-                    console.log(`Blocked message from muted user: ${data.user}`);
-                    return;
-                }
+                console.log(`Blocked message from muted user: ${data.user}`);
+                return; // Hide message for all users if the user is muted
             }
 
             const messageElement = document.createElement("p");
