--- a/chat.html
+++ b/chat.html
@@ -40,7 +40,7 @@
         <button onclick="sendMessage()">Send</button>
         <div id="chatBox" class="chat-box" style="max-height: 400px; overflow-y: auto;"></div>
     </div>
-    <img id="trollFace" class="troll-face" src="https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png" alt="Troll Face">
+    <img id="trollFace" class="troll-face" src="https://i.ebayimg.com/images/g/aP4AAOSw91pmoO11/s-l400.jpg="Troll Face">
 
 <script>
     const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
