--- a/chat.html
+++ b/chat.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div class="sidebar">
-        <a href="index.html">Home</a>
-        <a href="games.html">Games</a>
-        <a href="about.html">About Us</a>
-        <a href="contact.html">Contact</a>   
-        <a href="chat.html">Chat</a>
-        <a href="rabbitAI.html">rabbitAI calculator</a>
+        <a href="index.html" target="_blank">Home</a>
+        <a href="games.html" target="_blank">Games</a>
+        <a href="about.html" target="_blank">About Us</a>
+        <a href="contact.html" target="_blank">Contact</a>   
+        <a href="chat.html" target="_blank">Chat</a>
+        <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
     </div>
     <div class="content">
         <h2>Chat Room</h2>
@@ -24,27 +24,28 @@
         <button onclick="signOut()">Sign Out</button>
         <br><br>
         <input type="text" id="usernameInput" placeholder="Enter Username">
-        <input type="text" id="messageInput" placeholder="Type a message" onkeypress="handleKeyPress(event)">
+        <input type="text" id="messageInput" placeholder="Type a message">
         <button onclick="sendMessage()">Send</button>
         <div id="chatBox" class="chat-box" style="max-height: 400px; overflow-y: auto;"></div>
-        <div id="imageOverlay" class="image-overlay" style="display: none;"></div>
     </div>
 
 <script>
     const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
     const channel = ably.channels.get("chat-room");
 
-    let mutedUsers = {};
-    const modEmails = ["872654@dpsk12.net", "878197@dpsk12.net", "871341@dpsk12.net"];
-    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net"];
+    let mutedUsers = JSON.parse(localStorage.getItem("mutedUsers")) || {}; // Store muted users
+    const modEmails = ["872654@dpsk12.net", "878197@dpsk12.net", "871341@dpsk12.net"]; // Mods
+    const devEmails = ["856030@dpsk12.net", "866537@dpsk12.net", "871491@dpsk12.net"]; // Devs (including Head Dev)
 
     function signIn() {
         const email = prompt("Enter your email:");
         const username = prompt("Enter your username:");
+
         if (!email || !username) {
             alert("Email and username are required!");
             return;
         }
+
         sessionStorage.setItem("userEmail", email);
         sessionStorage.setItem("username", username);
         document.getElementById("authStatus").innerText = `Logged in as ${email}`;
@@ -66,78 +67,98 @@
             return;
         }
 
-        if (mutedUsers[email]) {
+        // **Check if user is muted before sending**
+        if (mutedUsers[email] && Date.now() < mutedUsers[email]) {
             alert("You are muted and cannot send messages.");
             return;
         }
 
-        if (messageInput.startsWith("/image")) {
-            handleImageCommand(messageInput);
+        // **Handle mute command**
+        if (messageInput.startsWith("/mute")) {
+            handleMuteCommand(messageInput);
             return;
         }
 
-        if (messageInput === "/troll") {
-            showImageOverlay("https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png");
-            return;
-        }
-
+        // **Send message**
         channel.publish("message", { text: messageInput, user: email, username: username });
         document.getElementById("messageInput").value = "";
     }
 
-    function handleKeyPress(event) {
-        if (event.key === "Enter") {
-            sendMessage();
-        }
-    }
-
-    function handleImageCommand(message) {
+    function handleMuteCommand(message) {
         const email = sessionStorage.getItem("userEmail");
-        if (!email || (!modEmails.includes(email) && !devEmails.includes(email))) {
-            alert("You do not have permission to use this command.");
+        if (!email) return;
+
+        // **Only Mods, Devs, and Head Dev can mute**
+        if (!modEmails.includes(email) && !devEmails.includes(email)) {
+            alert("You do not have permission to mute users.");
             return;
         }
 
         const messageParts = message.split(" ");
         if (messageParts.length < 2) {
-            alert("Usage: /image <image_url>");
+            alert("Usage: /mute <email>");
             return;
         }
 
-        const imageUrl = messageParts[1];
-        showImageOverlay(imageUrl);
-    }
+        const emailToMute = messageParts[1];
 
-    function showImageOverlay(imageUrl) {
-        const overlay = document.getElementById("imageOverlay");
-        overlay.style.display = "block";
-        overlay.style.backgroundImage = `url(${imageUrl})`;
-        overlay.style.backgroundSize = "cover";
-        overlay.style.backgroundPosition = "center";
-        setTimeout(() => { overlay.style.display = "none"; }, 5000);
+        if (!emailToMute.includes("@")) {
+            alert("Invalid email format.");
+            return;
+        }
+
+        mutedUsers[emailToMute] = Date.now() + 15 * 60 * 1000; // Mute expires in 15 minutes
+        localStorage.setItem("mutedUsers", JSON.stringify(mutedUsers)); // Save to storage
+
+        alert(`${emailToMute} has been muted for 15 minutes.`);
+        channel.publish("message", { text: `${emailToMute} has been muted for 15 minutes.`, user: "System", username: "System" });
+
+        // Auto-unmute after 15 minutes
+        setTimeout(() => {
+            delete mutedUsers[emailToMute];
+            localStorage.setItem("mutedUsers", JSON.stringify(mutedUsers)); // Update storage
+            channel.publish("message", { text: `${emailToMute} is now unmuted.`, user: "System", username: "System" });
+        }, 15 * 60 * 1000);
     }
 
     function loadMessages() {
         channel.subscribe("message", (message) => {
             const data = message.data;
             const chatBox = document.getElementById("chatBox");
-            if (mutedUsers[data.user]) return;
+
+            // **Block messages from muted users for everyone**
+            if (mutedUsers[data.user] && Date.now() < mutedUsers[data.user]) {
+                console.log(`Blocked message from muted user: ${data.user}`);
+                return; // Hide message for all users if the user is muted
+            }
 
             const messageElement = document.createElement("p");
+
             let extraStyle = "";
             let roleTag = "";
+            let userEmail = data.user;
+
+            // **Handle mod users' display and email visibility**
             if (modEmails.includes(data.user)) {
                 extraStyle = "color: yellow;";
                 roleTag = " <strong>[MOD]</strong>";
+                // Only show email to devs or head dev
+                if (devEmails.includes(sessionStorage.getItem("userEmail"))) {
+                    userEmail = data.user;
+                } else {
+                    userEmail = "";
+                }
+            } else if (data.user === "856030@dpsk12.net") {
+                extraStyle = "color: red;";
+                roleTag = " <strong>[HEAD DEV]</strong>";
+                userEmail = "";
             } else if (devEmails.includes(data.user)) {
                 extraStyle = "color: red;";
                 roleTag = " <strong>[DEV]</strong>";
-            } else if (data.user === "819113@dpsk12.net") {
-                extraStyle = "color: green;";
-                roleTag = " <strong>[SIGMA]</strong>";
+                userEmail = "";
             }
 
-            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username} (${data.user})${roleTag}:</strong> ${data.text}`;
+            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username} (${userEmail})${roleTag}:</strong> ${data.text}`;
             chatBox.appendChild(messageElement);
             chatBox.scrollTop = chatBox.scrollHeight;
         });
@@ -152,17 +173,5 @@
     };
 </script>
 
-<style>
-    .image-overlay {
-        position: fixed;
-        top: 0; left: 0;
-        width: 100vw; height: 100vh;
-        background-size: cover;
-        background-position: center;
-        z-index: 9999;
-    }
-</style>
-
 </body>
 </html>
-
