--- a/chat.html
+++ b/chat.html
@@ -82,6 +82,12 @@
             let extraStyle = "";
             let roleTag = "";
             let userEmail = data.user;
+            let emailDisplay = "";
+
+            const currentUserEmail = sessionStorage.getItem("userEmail");
+            if (modEmails.includes(currentUserEmail) || devEmails.includes(currentUserEmail) || currentUserEmail === headDevEmail) {
+                emailDisplay = ` (${userEmail})`;
+            }
 
             if (modEmails.includes(data.user)) {
                 extraStyle = "color: yellow;";
@@ -94,35 +100,12 @@
                 roleTag = " <strong>[DEV]</strong>";
             }
 
-            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username}${roleTag}:</strong> ${data.text}`;
+            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username}${roleTag}${emailDisplay}:</strong> ${data.text}`;
             chatBox.appendChild(messageElement);
             chatBox.scrollTop = chatBox.scrollHeight;
-
-            // **Check for @mentions and send a notification**
-            checkMentions(data.text, data.username);
         });
     }
 
-    function checkMentions(message, sender) {
-        const username = sessionStorage.getItem("username");
-        if (message.includes(`@${username}`) && document.hidden) {
-            sendNotification(sender, message);
-        }
-    }
-
-    function sendNotification(sender, message) {
-        if (Notification.permission === "granted") {
-            new Notification(`${sender} mentioned you`, { body: message });
-        } else if (Notification.permission !== "denied") {
-            Notification.requestPermission().then(permission => {
-                if (permission === "granted") {
-                    new Notification(`${sender} mentioned you`, { body: message });
-                }
-            });
-        }
-    }
-
-    // **Allow pressing "Enter" to send messages**
     document.getElementById("messageInput").addEventListener("keypress", function(event) {
         if (event.key === "Enter") {
             sendMessage();
@@ -140,3 +123,4 @@
 
 </body>
 </html>
+
