--- a/chat.html
+++ b/chat.html
@@ -48,7 +48,7 @@
 
         sessionStorage.setItem("userEmail", email);
         sessionStorage.setItem("username", username);
-        document.getElementById("authStatus").innerText = `Logged in as ${email}`;
+        document.getElementById("authStatus").innerText = `Logged in as ${username}`;
     }
 
     function signOut() {
@@ -106,7 +106,7 @@
         localStorage.setItem("mutedUsers", JSON.stringify(mutedUsers)); 
 
         alert(`${emailToMute} has been muted for 15 minutes.`);
-        channel.publish("message", { text: `${emailToMute} has been muted for 15 minutes.`, user: "System", username: "System" });
+        channel.publish("message", { text: `A user has been muted for 15 minutes.`, user: "System", username: "System" });
     }
 
     function loadMessages() {
@@ -122,20 +122,19 @@
             const messageElement = document.createElement("p");
             let extraStyle = "";
             let roleTag = "";
-            let userEmail = data.user;
-
+            
             if (modEmails.includes(data.user)) {
                 extraStyle = "color: yellow;";
                 roleTag = " <strong>[MOD]</strong>";
             } else if (data.user === "856030@dpsk12.net") {
-                extraStyle = "color: red;";
+                extraStyle = "color: blue;";
                 roleTag = " <strong>[HEAD DEV]</strong>";
             } else if (devEmails.includes(data.user)) {
                 extraStyle = "color: red;";
                 roleTag = " <strong>[DEV]</strong>";
             }
 
-            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username} (${userEmail})${roleTag}:</strong> ${data.text}`;
+            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username}${roleTag}:</strong> ${data.text}`;
             chatBox.appendChild(messageElement);
             chatBox.scrollTop = chatBox.scrollHeight;
         });
@@ -144,7 +143,7 @@
     window.onload = () => {
         const email = sessionStorage.getItem("userEmail");
         if (email) {
-            document.getElementById("authStatus").innerText = `Logged in as ${email}`;
+            document.getElementById("authStatus").innerText = `Logged in as ${sessionStorage.getItem("username")}`;
         }
         loadMessages();
     };
