--- a/chat.html
+++ b/chat.html
@@ -24,7 +24,7 @@
         <button onclick="signOut()">Sign Out</button>
         <br><br>
         <input type="text" id="usernameInput" placeholder="Enter Username">
-        <input type="text" id="messageInput" placeholder="Type a message">
+        <input type="text" id="messageInput" placeholder="Type a message" onkeydown="handleKeyPress(event)">
         <button onclick="sendMessage()">Send</button>
         <div id="chatBox" class="chat-box" style="max-height: 400px; overflow-y: auto;"></div>
     </div>
@@ -48,7 +48,7 @@
 
         sessionStorage.setItem("userEmail", email);
         sessionStorage.setItem("username", username);
-        document.getElementById("authStatus").innerText = `Logged in as ${username}`;
+        document.getElementById("authStatus").innerText = `Logged in as ${email}`;
     }
 
     function signOut() {
@@ -106,7 +106,7 @@
         localStorage.setItem("mutedUsers", JSON.stringify(mutedUsers)); 
 
         alert(`${emailToMute} has been muted for 15 minutes.`);
-        channel.publish("message", { text: `A user has been muted for 15 minutes.`, user: "System", username: "System" });
+        channel.publish("message", { text: `${emailToMute} has been muted for 15 minutes.`, user: "System", username: "System" });
     }
 
     function loadMessages() {
@@ -122,28 +122,35 @@
             const messageElement = document.createElement("p");
             let extraStyle = "";
             let roleTag = "";
-            
+            let userEmail = (modEmails.includes(data.user) || devEmails.includes(data.user)) ? data.user : "Hidden";
+
             if (modEmails.includes(data.user)) {
                 extraStyle = "color: yellow;";
                 roleTag = " <strong>[MOD]</strong>";
             } else if (data.user === "856030@dpsk12.net") {
-                extraStyle = "color: blue;";
+                extraStyle = "color: red;";
                 roleTag = " <strong>[HEAD DEV]</strong>";
             } else if (devEmails.includes(data.user)) {
                 extraStyle = "color: red;";
                 roleTag = " <strong>[DEV]</strong>";
             }
 
-            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username}${roleTag}:</strong> ${data.text}`;
+            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username} (${userEmail})${roleTag}:</strong> ${data.text}`;
             chatBox.appendChild(messageElement);
             chatBox.scrollTop = chatBox.scrollHeight;
         });
     }
 
+    function handleKeyPress(event) {
+        if (event.key === "Enter") {
+            sendMessage();
+        }
+    }
+
     window.onload = () => {
         const email = sessionStorage.getItem("userEmail");
         if (email) {
-            document.getElementById("authStatus").innerText = `Logged in as ${sessionStorage.getItem("username")}`;
+            document.getElementById("authStatus").innerText = `Logged in as ${email}`;
         }
         loadMessages();
     };
